--- a/Project-CS342/CMakeLists.txt
+++ b/Project-CS342/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project_CS342)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project_CS342 main.cpp CommandLineParsing.h CommandLineParsing.c CommonFeatures.c CommonFeatures.h primeP.c)
+add_executable(Project_CS342 main.cpp CommandLineParsing.h CommandLineParsing.c CommonFeatures.c CommonFeatures.h primeP.c primeT.c)
